feat: implement code review fixes and workspace configuration updates